--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.5.0"
+agp = "8.4.1" # supports Android Studio Jellyfish | 2023.3.1 // https://developer.android.com/studio/releases#android_gradle_plugin_and_android_studio_compatibility
 kotlin = "1.9.0"
 coreKtx = "1.10.1"
 junit = "4.13.2"
